--- a/HNG-stage1/src/index.css
+++ b/HNG-stage1/src/index.css
@@ -29,6 +29,8 @@ h3{
 img{
     height: auto;
     width: auto;
+    max-width: 75%;
+    max-height: 50%;
     border-radius: 15%;
 }
 .profileDetails{
