--- a/HNG-stage1/src/index.css
+++ b/HNG-stage1/src/index.css
@@ -30,7 +30,8 @@ img{
     height: auto;
     width: auto;
     display: block; 
-    margin: 0 auto
+    margin: 0 auto;
+    border-radius: 15px;
 }
 .profileDetails{
     font-size: 50px;
